improved general population statistics section, bugs still exist in this section but they will be squashed this evening

--- a/app/public/assets/css/custom.css
+++ b/app/public/assets/css/custom.css
@@ -517,3 +517,13 @@ body {
 .hidden {
     display: none;
 }
+
+/* Added custom statistic figures */
+.removeCustomStat {
+  font-family: 'Open Sans', sans-serif;
+}
+
+/* Times New Roman font unique attribute */
+.timesNewRomanText {
+  font-family: 'Times New Roman', Times, serif;
+}
